--- a/q/90983.html
+++ b/q/90983.html
@@ -3,7 +3,7 @@
 <head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6EBTM9J4LK"></script>
 <script src="../g.js"></script>
-    <title>cg::QNNN</title>
+    <title>cg::90983</title>
     <link rel="stylesheet" href="../c.css">
 </head>
 <body>
@@ -26,7 +26,6 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-  <!-- TXXX -->
 <tr d-ix="0"><td>010</td><td>K ngn/k</td><td>230710T192933Z</td><td><a href="https://codegolf.stackexchange.com/questions/90983/exploded-view-of-a-string/262612#262612">coltim</a></td></tr>
 <tr d-ix="1"><td>035</td><td>Zsh</td><td>230726T221448Z</td><td><a href="https://codegolf.stackexchange.com/questions/90983/exploded-view-of-a-string/263388#263388">roblogic</a></td></tr>
 <tr d-ix="2"><td>055</td><td>Bash +coreutils</td><td>230728T185842Z</td><td><a href="https://codegolf.stackexchange.com/questions/90983/exploded-view-of-a-string/263480#263480">roblogic</a></td></tr>
@@ -1162,3 +1161,32 @@ group.sort.filter(&gt;' ')
    Œg   group
 </code></pre>
 </div>
+
+<table id="st">
+<!-- Popups content will be added here -->
+</table>
+
+<table id="at">
+<!-- Popups content will be added here -->
+</table>
+
+</div>
+
+
+
+
+
+  <div class="footer">
+      <b><a class="nonewtab" href="../">GOLFSCORE/</a><a href="https://codegolf.stackexchange.com/questions/90983/">90983</a></b>
+  </div>
+<div class="footer-space">&nbsp;</div>
+
+
+
+<script src="../c.js"> </script>
+</body>
+</html>
+
+
+
+
