--- a/q/188005.html
+++ b/q/188005.html
@@ -1723,6 +1723,389 @@ Speak thy.Speak thy.You is the sum of you a big pig.Speak thy.
 <pre><code>←´←´´´X
 </code></pre>
 
+<p><a href="https://tio.run/##S85ILErOT8z5//9R24RDW8AECEb8/w8A" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> The final <code>X</code> could be any byte in the Charcoal code page except <code>0xFF</code> and the two already in use. Works by printing the desired characters leftwards. Alternative approach, also 7 bytes:</p>
+
+<pre><code>←”y←←”y
+</code></pre>
+
+<p><a href="https://tio.run/##S85ILErOT8z5//9R24RHDXMrQRSE9f8/AA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> The final <code>y</code> could be any ASCII character but I picked <code>y</code> because of the symmetry. Works by printing two <code>←</code>s leftwards so that the final character gets printed at the start of the output.</p>
+</div>
+<div id="pu112" class="pu"><h1><a href="https://www.dyalog.com/" rel="nofollow noreferrer">APL (Dyalog Unicode)</a>, <s>5</s> 4 bytes</h1>
+
+
+
+<p>Full programs.</p>
+
+<p>Boring solution from J.Sallé:</p>
+
+<pre class="lang-apl prettyprint-override"><code>1231
+</code></pre>
+
+<p>Prints that number. A much more interesting solution:</p>
+
+<pre class="lang-apl prettyprint-override"><code>010E1
+</code></pre>
+
+<p><a href="https://tio.run/##SyzI0U2pTMzJT///qKO94L@BoYGrIYj5XwEMCgA" rel="nofollow noreferrer" title="APL (Dyalog Unicode) – Try It Online">Try it online!</a></p>
+
+<p>APL ignores leading zeros, so this is simply scaled format for 10×10¹=100.</p>
+</div>
+<div id="pu113" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 7 bytes</h1>
+
+<pre><code>"w\\""w
+</code></pre>
+
+<p><a href="https://tio.run/##SypKTM6ozMlPN/r/X6k8JkZJqfz/fwA" rel="nofollow noreferrer" title="Brachylog – Try It Online">Try it online!</a></p>
+
+<p><em>Thanks to Shaggy for correcting this to comply with the challenge specification.</em></p>
+
+<p>Boring string literal, except thanks to the weird way Brachylog string literals work, the escaped backslash also still escapes the quote afterwards, so it's not actually that boring.</p>
+</div>
+<div id="pu114" class="pu"><h1><a href="http://gema.sourceforge.net/" rel="nofollow noreferrer">Gema</a>, 13 characters</h1>
+
+<pre><code>\A=l\\\\@fail
+</code></pre>
+
+<p><a href="https://tio.run/##S0/NTfyvqAsCj9omw@j/MY62OTFA4JCWmJnz/z8A" rel="nofollow noreferrer" title="Gema – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu115" class="pu"><h1><a href="https://github.com/splcurran/Gaia" rel="nofollow noreferrer">Gaia</a>, 5 bytes</h1>
+
+<pre><code>
+⌋ ”⌋
+</code></pre>
+
+<p><a href="https://tio.run/##S0/MTPz/n@tRT7fCo4a5QOr/fwA" rel="nofollow noreferrer" title="Gaia – Try It Online">Try it online!</a></p>
+
+<p>The <code>⌋</code> is just there as a no-op.</p>
+
+<pre><code>            % helper function
+⌋ ”⌋         % main function: push "⌋ " and convert to lowercase
+            % then implicitly print with trailing newline
+</code></pre>
+</div>
+<div id="pu116" class="pu"><h2>Bash (<strike>15</strike> 11 characters)</h2>
+
+<pre><code>echo -n e-e
+</code></pre>
+
+<p>which prints out</p>
+
+<pre><code>e-e
+</code></pre>
+
+<ul>
+<li>-4 chars by not using <code>|rev</code></li>
+</ul>
+</div>
+<div id="pu117" class="pu"><h1><a href="http://www.complang.tuwien.ac.at/forth/gforth/Docs-html/" rel="nofollow noreferrer">Forth (gforth)</a>, 9 bytes</h1>
+<p>Prints an escape-supporting string.</p>
+
+<pre class="lang-forth prettyprint-override"><code>.\&quot;   .&quot; 
+</code></pre>
+<p><a href="https://tio.run/##S8svKsnQTU8DUf//68UoKSgo6Ckp/P8PAA" rel="nofollow noreferrer" title="Forth (gforth) – Try It Online"><strong>Try it online</strong></a></p>
+<hr />
+<h3>Also 9 bytes:</h3>
+<p>Prints three spaces.</p>
+<pre class="lang-forth prettyprint-override"><code> .&quot;    &quot; 
+</code></pre>
+<p><a href="https://tio.run/##S8svKsnQTU8DUf//K@gpKQCBksL//wA" rel="nofollow noreferrer"><strong>Try it online</strong></a></p>
+<hr />
+<h3>9 bytes with Stack Underflow:</h3>
+<pre class="lang-forth prettyprint-override"><code> .&quot; .. &quot;.
+</code></pre>
+<p><a href="https://tio.run/##S8svKsnQTU8DUf//K@gpKejpKSjp/f8PAA" rel="nofollow noreferrer"><strong>Try it online</strong></a></p>
+<hr />
+<p>The 2nd and 3rd solutions also work if you replace first quotations with <code>(</code> and last quotes with <code>)</code>. Essentially, plenty of ways to do it in 9 bytes, but probably not any shorter.</p>
+<p><a href="https://www.complang.tuwien.ac.at/forth/gforth/Docs-html/Displaying-characters-and-strings.html" rel="nofollow noreferrer">Documentation</a></p>
+</div>
+<div id="pu118" class="pu"><p><strong>HQ9+ 4 characters</strong></p>
+
+<p><code>+AQ+</code></p>
+
+<p>Explanation:</p>
+
+<pre><code>+ ; increment accumulator
+A ; nop
+Q ; print itself
++ ; increment accumulator
+</code></pre>
+</div>
+<div id="pu119" class="pu"><h1><a href="https://github.com/Draco18s/RunicEnchantments/tree/Console" rel="nofollow noreferrer">Runic Enchantments</a>, <s>9</s> 7 bytes</h1>
+
+<pre><code>'@'':r@
+</code></pre>
+
+<p><a href="https://tio.run/##KyrNy0z@/1/dQV3dqsjh/38A" rel="nofollow noreferrer" title="Runic Enchantments – Try It Online">Try it online!</a></p>
+
+<p>-2 bytes by just using char literals. Outputs <code>@''</code></p>
+</div>
+<div id="pu120" class="pu"><h1><a href="https://github.com/DennisMitchell/dodos" rel="nofollow noreferrer">Dodos</a>, 22 bytes</h1>
+
+<pre><code>
+&#9;dot
+&#9;dot
+0         0
+</code></pre>
+
+<p><a href="https://tio.run/##S8lPyS/@/5@LMyW/BEIYKMCAwf//AA" rel="nofollow noreferrer" title="Dodos – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu121" class="pu"><h1><a href="https://github.com/TryItOnline/brainfuck" rel="noreferrer">brainfuck</a>, 17 bytes</h1>
+
+<pre><code>U-[&gt;+&lt;-UU--]&gt;...U
+</code></pre>
+
+<p><a href="https://tio.run/##SypKzMxLK03O/v8/VDfaTttGNzRUVzfWTk9PL/T/fwA" rel="noreferrer" title="brainfuck – Try It Online">Try it online!</a></p>
+
+<p>With unprintables this can be reduced to 7 bytes: <code>␀..␀_.␀</code></p>
+</div>
+<div id="pu122" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language" rel="nofollow noreferrer">Retina</a>, 7 bytes</h1>
+
+<pre><code>((K`(`(
+</code></pre>
+
+<p><a href="https://tio.run/##K0otycxLNPz/X0PDO0EjQeP/fwA" rel="nofollow noreferrer" title="Retina – Try It Online">Try it online!</a> Retina 1 does not output a trailing newline by default, but fortunately it has the <code>K</code> command which allows us to specify a constant string output. The grouping construct <code>(</code> is used to increase the number of distinct characters to meet the minimum requirement.</p>
+</div>
+<div id="pu123" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 7 bytes</h1>
+
+<pre><code>
+01$*$$
+</code></pre>
+
+<p><a href="https://tio.run/##K0otycxL/P@fy8BQRUtF5f9/AA" rel="nofollow noreferrer" title="Retina 0.8.2 – Try It Online">Try it online!</a> Retina 0.8.2 outputs a trailing newline by default, so the code starts with that. Conveniently, this also matches the default empty input, allowing the replace stage to get to work. It then suffices to come up with a string of even length > 2 that outputs the other 2 characters.</p>
+</div>
+<div id="pu124" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, 11 bytes</h1>
+
+
+
+<pre class="lang-r prettyprint-override"><code>cat("))c" )
+</code></pre>
+
+<p><a href="https://tio.run/##K/r/PzmxRENJUzNZSUHz/38A" rel="nofollow noreferrer" title="R – Try It Online">Try it online!</a></p>
+
+<p>Outputs <code>))c</code>. Space added to make the number of characters odd: otherwise we would need to output 4 characters, and that would make the code longer anyway.</p>
+</div>
+<div id="pu125" class="pu"><h1><a href="https://github.com/Flakheads/BrainHack" rel="nofollow noreferrer">Brain-Flak</a>, 11 bytes</h1>
+
+<pre><code>&#1;((((&#1;))))&#1;
+</code></pre>
+
+<p><a href="https://tio.run/##SypKzMzLSEzO/v@fUQMIGDWBgPH///@6jgA" rel="nofollow noreferrer" title="Brain-Flak (BrainHack) – Try It Online">Try it online!</a></p>
+
+<h2>Explanation</h2>
+
+<p>We need to put 3 things on the stack.  The fastest way to do that is to put 3 1s (or zeros) on the stack.  Now since <code>&#1;</code> (code point 1) does nothing in Brain-Flak we can add these to the program at the first middle and last places.  Now this feels a bit cheaty so here are two more answers that are less cheaty in my opinion.</p>
+
+<h1>Prints braces, 31 bytes</h1>
+
+<pre><code>( (((((()()()()()){}){}){}))())
+</code></pre>
+
+<p><a href="https://tio.run/##SypKzMzLSEzO/v9fQ0EDDDRhULO6FopAnP///@s6AgA" rel="nofollow noreferrer" title="Brain-Flak (BrainHack) – Try It Online">Try it online!</a></p>
+
+<p>This answer prints braces so that the characters printed are actually relevant to the code, it does have one padding character to make the length odd so we only have to print 1 middle character.</p>
+
+<h1>Contains only braces, 32 bytes</h1>
+
+<pre><code>(((()((((()(()()){}){}){}){}))))
+</code></pre>
+
+<p><a href="https://tio.run/##SypKzMzLSEzO/v9fAwg0NaCkpoamZnUtAgHB////dR0B" rel="nofollow noreferrer" title="Brain-Flak (BrainHack) – Try It Online">Try it online!</a></p>
+
+<p>This is a braces only program both the source and (consequently) the output are made up entirely of braces (character Brain-Flak actually cares about).</p>
+</div>
+<div id="pu126" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 17 bytes</h1>
+
+
+
+<pre class="lang-hs prettyprint-override"><code>main=putStr"\"Sm"
+</code></pre>
+
+<p><a href="https://tio.run/##y0gszk7Nyfn/PzcxM8@2oLQkuKRIKUYpOFfp/38A" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu127" class="pu"><h1><a href="https://esolangs.org/wiki/Lenguage" rel="nofollow noreferrer">Lenguage</a>, <s>292</s> 2340 bytes</h1>
+
+<p><em>Thanks to Jimmy23013 for pointing out I need another 2048 bytes</em> </p>
+
+<p>2340 bytes of any character with the first, middle two and last characters being a null byte. </p>
+
+<p>Prints 4 null characters.</p>
+
+<p><a href="https://tio.run/##SypKzMxLK03O/v9fDwj@/wcA" rel="nofollow noreferrer" title="brainfuck – Try It Online">Try it online in brainfuck</a></p>
+</div>
+<div id="pu128" class="pu"><h1><a href="https://github.com/maxbergmark/mathgolf/blob/master/math_golf.txt" rel="nofollow noreferrer">MathGolf</a>, <s>5</s> 4 <a href="https://github.com/maxbergmark/mathgolf/blob/master/code_page.py" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>1231
+</code></pre>
+<p>-1 byte by using the trivial solution presented by <a href="https://codegolf.stackexchange.com/a/188019/52210"><em>@ErikTheOutgolfer</em> in his Jelly answer</a>, which works for any language with implicit output without trailing newline.</p>
+<p><a href="https://tio.run/##y00syUjPz0n7/9/QyNjw/38A" rel="nofollow noreferrer">Try it online.</a></p>
+<p><strong>Original 5 <a href="https://github.com/maxbergmark/mathgolf/blob/master/code_page.py" rel="nofollow noreferrer">bytes</a> answer:</strong></p>
+<pre><code>ùù xx
+</code></pre>
+<p>Outputs <code>x ù</code>.</p>
+<p><a href="https://tio.run/##y00syUjPz0n7///wzsM7FSoq/v8HAA" rel="nofollow noreferrer">Try it online.</a></p>
+<p><strong>Explanation:</strong></p>
+
+<pre class="lang-python prettyprint-override"><code>ùù x   # Push 3-char string &quot;ù x&quot;
+    x  # Reverse it to &quot;x ù&quot;
+       # (output the entire string joined together implicitly without trailing newline)
+</code></pre>
+</div>
+<div id="pu129" class="pu"><h1>PowerShell, 3 bytes</h1>
+<pre><code>00000000: 0a0d 31                                  ..1
+</code></pre>
+<p>Works only in Microsoft Windows.</p>
+<p>The output is unfortunately 8 bytes in UTF-16. But the question says output the characters, and not the bytes. Arguably UTF-16 is just one of the supported ways to represent the characters in PowerShell. They are not interpreted differently from an ASCII file.</p>
+</div>
+<div id="pu130" class="pu"><h1><a href="https://github.com/TehFlaminTaco/RProgN-2" rel="noreferrer">RProgN 2</a>, 3 bytes</h1>
+
+<pre><code>1
+0
+</code></pre>
+
+<p><a href="https://tio.run/##Kyooyk/P0zX6/9@Qy@D/fwA" rel="noreferrer" title="RProgN 2 – Try It Online">Try it online!</a></p>
+
+<p>I think this is valid?</p>
+</div>
+<div id="pu131" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="noreferrer">Jelly</a>, 5 bytes</h1>
+
+<pre><code>001 0
+</code></pre>
+
+<p><a href="https://tio.run/##y0rNyan8/9/AwFDB4P9/AA" rel="noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
+
+<p>The output has two distinct characters, but the code also has a third one.</p>
+
+<p>Trivial 4-byte version:</p>
+
+<pre><code>1231
+</code></pre>
+</div>
+<div id="pu132" class="pu"><h1><a href="http://www.snobol4.org/csnobol4/" rel="nofollow noreferrer">SNOBOL4 (CSNOBOL4)</a>, 19 bytes</h1>
+
+<pre><code>
+&#9;OUTPUT = 'D='
+END
+</code></pre>
+
+<p><a href="https://tio.run/##K87LT8rPMfn/n4vTPzQkIDREwVZB3cVWncvVz@X/fwA" rel="nofollow noreferrer" title="SNOBOL4 (CSNOBOL4) – Try It Online">Try it online!</a></p>
+
+<p>Prints <code>D=&lt;newline&gt;</code>, using SNOBOL's trailing newline in <code>OUTPUT</code>.</p>
+
+<p><code>D=</code></p>
+</div>
+<div id="pu133" class="pu"><h1><a href="https://www.dyalog.com/" rel="nofollow noreferrer">APL (Dyalog Unicode)</a>, 9 bytes</h1>
+
+
+
+<pre class="lang-apl prettyprint-override"><code>⎕←'''''⎕'
+</code></pre>
+
+<p><a href="https://tio.run/##SyzI0U2pTMzJT////1Hf1EdtE9RBAMhU//8fAA" rel="nofollow noreferrer" title="APL (Dyalog Unicode) – Try It Online">Try it online!</a></p>
+
+<p>Both the last and middle characters are <code>'</code>, while the first is <code>⎕</code>.</p>
+</div>
+<div id="pu134" class="pu"><h1><a href="https://github.com/catseye/Befunge-93" rel="nofollow noreferrer">Befunge-93</a>, 7 bytes</h1>
+
+<pre><code>.",  @0
+</code></pre>
+
+<p><a href="https://tio.run/##S0pNK81LT/3/X09JR0HBweD/fwA" rel="nofollow noreferrer" title="Befunge-93 – Try It Online">Try it online!</a></p>
+
+<h2>Explanation</h2>
+
+<p>Output is <code>0 .</code></p>
+
+<pre><code>.       pop value (0) from stack, output as number with a trailing space
+ "      toggle string mode, wraps around and pushes every char to the stack
+  ,     pop value (".") from stack, output as character 
+        spaces are no-ops
+     @  end the program
+      0 trailing 0 to match the output
+</code></pre>
+</div>
+<div id="pu135" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="noreferrer">Ruby</a>, 6 bytes</h1>
+
+
+
+<pre class="lang-ruby prettyprint-override"><code>
+p " "
+</code></pre>
+
+<p><a href="https://tio.run/##KypNqvz/n6tAQUlB6f9/AA" rel="noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
+
+<p>This outputs <code>" "</code> plus a newline. The code ends with a <code>"</code>, the middle two characters are <code></code> and <code>"</code>, and it starts with a newline.</p>
+</div>
+<div id="pu136" class="pu"><h1>Java 8, 11 bytes (as lambda function)</h1>
+
+<pre class="lang-java prettyprint-override"><code>v-&gt;'&quot;'+&quot;'v&quot;
+</code></pre>
+<p>Outputs <code>&quot;'v</code>.</p>
+<p><a href="https://tio.run/##LU1LCoMwFNx7isFNIkUvUNob1E3BTeniNdoSG59inoFSPHsaqZuB@fcUqOzbdzSOvMeFLH8zwLJ085NMh3qjwFVmyy8Y3Yy2RSiOSV2zBF5IrEENxgkxlGeVq0OuQh63yLQ8XHL3UNi6Q7rQ/7nbHVTs@x8v3VCNi1RTssSx5spoXpwr9rM1/gA" rel="nofollow noreferrer">Try it online.</a></p>
+<h1>Java 8, 67 bytes (as full program)</h1>
+<pre class="lang-java prettyprint-override"><code>interface M{static void main(String[]ar){System.out.print(&quot;}ni&quot;);}}
+</code></pre>
+<p>Outputs <code>}ni</code>.</p>
+<p>Note the <code>ar</code> instead of <code>a</code> as argument. Otherwise the middle part had to be <code>in</code>, but printing that would make the size odd again, which would cause a paradox-loop..</p>
+<p><a href="https://tio.run/##y0osS9TNSsn@/z8zryS1KC0xOVXBt7q4JLEkM1mhLD8zRSE3MTNPI7ikKDMvPTo2sUizOriyuCQ1Vy@/tESvAChaoqFUm5eppGldW/v/PwA" rel="nofollow noreferrer">Try it online.</a></p>
+</div>
+<div id="pu137" class="pu"><h1>Elm 0.19, 11 bytes</h1>
+
+
+
+<pre class="lang-elm prettyprint-override"><code>f()="\"\\f"
+</code></pre>
+
+<p>Prints <code>"\f</code>. See it working <a href="https://ellie-app.com/63vkRbXk6zLa1" rel="nofollow noreferrer">here</a>.</p>
+</div>
+<div id="pu138" class="pu"><h2>Batch, 9 characters</h2>
+
+<pre><code>
+@echo hh</code></pre>
+
+<p>The middle and last character are both <code>h</code>, and then the <code>echo</code> prints a newline by default, which is the first character of the script.</p>
+</div>
+<div id="pu139" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="noreferrer">Ruby</a>, <s>11</s> 9 bytes</h1>
+
+
+
+<pre class="lang-ruby prettyprint-override"><code>print:ptp
+</code></pre>
+
+<p><a href="https://tio.run/##KypNqvz/v6AoM6/EqqCk4P9/AA" rel="noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu140" class="pu"><h1><a href="https://sourceforge.net/p/cjam" rel="nofollow noreferrer">CJam</a>, 7 bytes</h1>
+
+<pre><code>'@'' _@
+</code></pre>
+
+<p><a href="https://tio.run/##S85KzP3/X91BXV0h3uH/fwA" rel="nofollow noreferrer" title="CJam – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu141" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 17 bytes</h1>
+
+
+
+<pre class="lang-hs prettyprint-override"><code>main=putStr"\"Sm"
+</code></pre>
+
+<p><a href="https://tio.run/##y0gszk7Nyfn/PzcxM8@2oLQkuKRIKUYpOFfp/38A" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu142" class="pu"><h1><a href="https://php.net/" rel="noreferrer">PHP</a>, 9 bytes</h1>
+
+
+
+<pre class="lang-php prettyprint-override"><code>&lt;?=";;&lt;";
+</code></pre>
+
+<p><a href="https://tio.run/##K8go@P/fxt5WydraRsn6/38A" rel="noreferrer" title="PHP – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu143" class="pu"><h1><a href="https://babeljs.io/" rel="nofollow noreferrer">JavaScript (Babel Node)</a>, 11 bytes</h1>
+
+
+
+<pre class="lang-javascript prettyprint-override"><code>_=&gt;(')\)_')
+</code></pre>
+
+<p><a href="https://tio.run/##y0osSyxOLsosKNFNSkxKzdHNy09J/Z9m@z/e1k5DXTNGM15d839yfl5xfk6qXk5@ukaahqbmfwA" rel="nofollow noreferrer" title="JavaScript (Babel Node) – Try It Online">Try it online!</a></p>
+</div>
 
 <table id="st">
 <!-- Popups content will be added here -->
