--- a/q/54.html
+++ b/q/54.html
@@ -3,7 +3,7 @@
 <head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6EBTM9J4LK"></script>
 <script src="../g.js"></script>
-    <title>cg::QNNN</title>
+    <title>cg::54</title>
     <link rel="stylesheet" href="../c.css">
 </head>
 <body>
@@ -26,7 +26,6 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-  <!-- TXXX -->
 <tr d-ix="0"><td>nan</td><td>A common pattern is to use listmaplambda c c.func</td><td>240325T180711Z</td><td><a href="https://codegolf.stackexchange.com/questions/54/tips-for-golfing-in-python/272078#272078">TheUltim</a></td></tr>
 <tr d-ix="1"><td>nan</td><td>Multiline Integer Inputs</td><td>231008T084341Z</td><td><a href="https://codegolf.stackexchange.com/questions/54/tips-for-golfing-in-python/265855#265855">Nishant </a></td></tr>
 <tr d-ix="2"><td>nan</td><td></td><td>231228T200732Z</td><td><a href="https://codegolf.stackexchange.com/questions/54/tips-for-golfing-in-python/268825#268825">l4m2</a></td></tr>
@@ -3823,7 +3822,6 @@ s=sys.stdin.read()
 <pre><code>c=lambda a:a&lt;3and a+10or a-5
 </code></pre>
 </div>
-<!-- TYYY -->
 
 <table id="st">
 <!-- Popups content will be added here -->
@@ -3840,7 +3838,7 @@ s=sys.stdin.read()
 
 
   <div class="footer">
-      <b><a class="nonewtab" href="../">GOLFSCORE/</a><a href="https://codegolf.stackexchange.com/questions/QNNN/">QNNN</a></b>
+      <b><a class="nonewtab" href="../">GOLFSCORE/</a><a href="https://codegolf.stackexchange.com/questions/54/">54</a></b>
   </div>
 <div class="footer-space">&nbsp;</div>
 
