--- a/q/261077.html
+++ b/q/261077.html
@@ -26,6 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
+  <!-- TXXX -->
 <tr d-ix="0"><td>nan</td><td>K ngn/k</td><td>230806T031320Z</td><td><a href="https://codegolf.stackexchange.com/questions/261077/turn-strings-into-hexagonal-spirals/263770#263770">doug</a></td></tr>
 <tr d-ix="1"><td>360</td><td>Haskell</td><td>230525T075336Z</td><td><a href="https://codegolf.stackexchange.com/questions/261077/turn-strings-into-hexagonal-spirals/261221#261221">Roman Cz</a></td></tr>
 <tr d-ix="2"><td>365</td><td>Javascript</td><td>230524T002251Z</td><td><a href="https://codegolf.stackexchange.com/questions/261077/turn-strings-into-hexagonal-spirals/261198#261198">ccprog</a></td></tr>
@@ -207,6 +208,7 @@ J                                  - 1-indexed indices -&gt; [1,2,...,len(Chars)
                                      (replaces remaining zeros with spaces)
 </code></pre>
 </div>
+<!-- TYYY -->
 
 <table id="st">
 <!-- Popups content will be added here -->
