--- a/q/77958.html
+++ b/q/77958.html
@@ -26,6 +26,127 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
+<tr d-ix="0"><td>129</td><td>Ruby</td><td>160418T045354Z</td><td><a href="https://codegolf.stackexchange.com/questions/77958/convert-to-roman-numeral/78000#78000">Value In</a></td></tr>
+<tr d-ix="1"><td>134</td><td>TCL</td><td>190414T131309Z</td><td><a href="https://codegolf.stackexchange.com/questions/77958/convert-to-roman-numeral/183171#183171">Chau Gia</a></td></tr>
+<tr d-ix="2"><td>144</td><td>Ruby</td><td>160418T220851Z</td><td><a href="https://codegolf.stackexchange.com/questions/77958/convert-to-roman-numeral/78045#78045">MegaTom</a></td></tr>
+<tr d-ix="3"><td>134</td><td>R</td><td>160419T145922Z</td><td><a href="https://codegolf.stackexchange.com/questions/77958/convert-to-roman-numeral/78070#78070">Masclins</a></td></tr>
+<tr d-ix="4"><td>188</td><td>Python</td><td>160419T124720Z</td><td><a href="https://codegolf.stackexchange.com/questions/77958/convert-to-roman-numeral/78065#78065">MrPublic</a></td></tr>
+<tr d-ix="5"><td>108</td><td>Common Lisp</td><td>160418T210808Z</td><td><a href="https://codegolf.stackexchange.com/questions/77958/convert-to-roman-numeral/78041#78041">coredump</a></td></tr>
+<tr d-ix="6"><td>067</td><td>Mathematica</td><td>160417T135928Z</td><td><a href="https://codegolf.stackexchange.com/questions/77958/convert-to-roman-numeral/77965#77965">Martin E</a></td></tr>
+<tr d-ix="7"><td>136</td><td>JavaScript ES6</td><td>160417T101049Z</td><td><a href="https://codegolf.stackexchange.com/questions/77958/convert-to-roman-numeral/77961#77961">Neil</a></td></tr>
+</table>
+<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>137</s> <s>134</s> <s>130</s> 129 bytes</h1>
+<p>Recursive function that returns the string. I'm trying to golf down the numeral encodings a bit more if possible, but I'm not sure how.</p>
+<p>Whoops, it's practically a direct port of @Neil's ES6 answer now.</p>
+<pre class="lang-ruby prettyprint-override"><code>f=-&gt;x{(x&lt;t=1e3)?&quot;CM900D500CD400C100XC90L50XL40X10IX9V5IV4I1&quot;.gsub(/(\D+)(\d+)/){s=x/v=eval($2);x%=v;$1*s}:&quot;(#{f[x/t]})#{f[x%t]}&quot;}
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=LY7BasJAEIbv-xQhRtitxMy6m7RbG3tILgFLbxLQIrUmKtgqzSbdEnLwOXrJoX0o36a7mmH45-Nn_mF-fj_L1Xfb_pUyd-_Opzx0J6rG6kGGNGPk0Y6eBEDsA0Qx10IB0kjA1Id0yiGlkKRi5icznlB7uCnKFfbwIh4QvFgPiEfqIlReFWbV6x47IzJW_bAaO_SmaO5t3KvzufLkS0Mu1NdkN90j7Gu722fWJpMFso6lLCy7VzvL4dv28H5sLHdimYw25GG50zmUfayv0fb8TNEIMcQR9REHFOi-1aBHECAGGpgQwjiAuKHAkJFumjbLXV3v_gM" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu1" class="pu"><h2>TCL 134 bytes</h2>
+<pre><code>proc f r {
+set map {M 1000+ CM 900+ D 500+ CD 400+ C 100+ XC 90+ L 50+ XL 40+ X 10+ IX 9+ V 5+ IV 4+ I 1+}
+expr [string map $map $r]0}
+</code></pre>
+<p>Try it here: <a href="https://rextester.com/BJC92885" rel="nofollow noreferrer">https://rextester.com/BJC92885</a></p>
+</div>
+<div id="pu2" class="pu"><h1>Ruby, <s>185 161</s> 144 bytes</h1>
+<pre><code>r=-&gt;i{i&gt;(t=1e3)? &quot;(#{r[i/t]})&quot;+r[i%t]:(s=?I*i;&quot;IVXXLCCDM&quot;.scan(/(.)(.)(.)/){|x,y,z|{x*5=&gt;y,x*4=&gt;x+y,y*2=&gt;z,y+x+y=&gt;x+z}.map{|x,y|s.gsub!x,y}};s)}
+</code></pre>
+<p>Over a year after the original post, I think I learned something about golfing.</p>
+<p><sub>Thank you Value Ink for your valuable comments.</sub></p>
+</div>
+<div id="pu3" class="pu"><h1>R, 134</h1>
+<pre><code>m=1000;x=scan();while(x[1]&gt;=m)x=c(floor(x[1]/m),x[1]%%m,x[-1]);cat(rep(&quot;(&quot;,length(x)),sep=&quot;&quot;);cat(as.character(as.roman(x)),sep=&quot;)&quot;)
+</code></pre>
+<p>It's pretty much not the best option, but I think the idea should go pretty similar to this.</p>
+</div>
+<div id="pu4" class="pu"><h2>Python, 188 <s>194</s></h2>
+
+<p><em>-6 bytes from getting rid of some whitespace</em></p>
+
+<p>This challenge brought me back to when I was first learning to program...</p>
+
+<pre><code>def f(x,s=zip("M CM D CD C XC L XL X IX V IV I".split(),[1e3,900,500,400,100,90,50,40,10,9,5,4,1])):
+ r=""if x&lt;4e3else"("+f(x/1e3)+")";x%=1e3
+ for a,b in s:
+    while x&gt;=b:r+=a;x-=b
+ return r
+</code></pre>
+
+<p>It might not be the shortest solution, but I had fun golfing this problem.</p>
+
+<p><a href="https://repl.it/CHJj/2" rel="nofollow">Try it out!</a></p>
+</div>
+<div id="pu5" class="pu"><h2>Common Lisp, 108</h2>
+
+
+
+<pre class="lang-lisp prettyprint-override"><code>(defun p(n)(if(&gt; n 0)(if(&lt; n 4000)(format()"~@R"n)(format()"(~A)~@[~A~]"(p(floor n 1000))(p(mod n 1000))))))
+</code></pre>
+
+<h2>Ungolfed</h2>
+
+<pre class="lang-lisp prettyprint-override"><code>(defun p(n)
+  (if (&gt; n 0)
+      (if (&lt; n 4000)
+
+          ;; Built-in Roman formatter (between 1 and 3999)
+          (format () "~@R" n)
+
+          ;; Divide N by 1000, as 1000*Q + R.
+          ;; First print (p Q) in parentheses (recursively)
+          ;; Then, if it is not NIL, the remainder R.
+          (format () "(~A)~@[~A~]"
+                  (p (floor n 1000))
+                  (p (mod n 1000))))))
+</code></pre>
+
+<h2>Tests</h2>
+
+<p>Two tests give different outputs than the ones from the question:</p>
+
+<pre class="lang-lisp prettyprint-override"><code>(loop for (in out) in '((1 "I")
+                        (2 "II")
+                        (3 "III")
+                        (4 "IV")
+                        (15 "XV")
+                        (40 "XL")
+                        (60 "LX")
+                        (67 "LXVII")
+                        (400 "CD")
+                        (666 "DCLXVI")
+                        (3000 "MMM")
+                        (3999 "MMMCMXCIX")
+                        (4000 "M(V)")
+                        (4999 "M(V)CMXCIX")
+                        (6000 "(VI)")
+                        (6000000 "((VI))")
+                        (6006000 "((VI)VI)")
+                        (6666666666 "(((VI)DCLXVI)DCLXVI)DCLXVI"))
+   for computed = (p in)
+   unless (string= out computed)
+   collect (list in out computed))
+
+=&gt; ((4000 "M(V)" "(IV)")
+    (4999 "M(V)CMXCIX" "(IV)CMXCIX"))
+</code></pre>
+</div>
+<div id="pu6" class="pu"><h2>Mathematica, 67 bytes</h2>
+
+<pre><code>Fold["("&lt;&gt;#&lt;&gt;")"&lt;&gt;#2&amp;,RomanNumeral[#~IntegerDigits~1000]/."N"-&gt;""]&amp;
+</code></pre>
+
+<p>Avoids all trouble with <code>M</code> by converting the input to base 1000 and converting each digit separately with <code>RomanNumeral</code>. Then we fold them up by inserting <code>(...)</code> from the left.</p>
+
+<p>Unfortunately, Mathematica represents zeros as <code>N</code> so we need to get rid of those.</p>
+</div>
+<div id="pu7" class="pu"><h2>JavaScript (ES6), 136 bytes</h2>
+
+<pre><code>f=n=&gt;n&lt;4e3?"M1000CM900D500CD400C100XC90L50XL40X10IX9V5IV4I1".replace(/(\D+)(\d+)/g,(_,r,d)=&gt;r.repeat(n/d,n%=d)):`(${f(n/1e3)})`+f(n%1e3)
+</code></pre>
+
+<p>For numbers under 4000, repeats each Roman "letter" as many times as possible, using the list of Roman "letters" and their decimal values. Otherwise recursively builds up the answer from the division and modulo with 1000. Fortunately <code>repeat</code> truncates so I don't have to do it myself.</p>
+</div>
 
 <table id="st">
 <!-- Popups content will be added here -->
