--- a/q/119690.html
+++ b/q/119690.html
@@ -3,7 +3,7 @@
 <head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6EBTM9J4LK"></script>
 <script src="../g.js"></script>
-    <title>cg::QNNN</title>
+    <title>cg::119690</title>
     <link rel="stylesheet" href="../c.css">
 </head>
 <body>
@@ -26,7 +26,6 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-  <!-- TXXX -->
 <tr d-ix="0"><td>029</td><td>Julia 0.6</td><td>230914T182335Z</td><td><a href="https://codegolf.stackexchange.com/questions/119690/the-forbidden-built-in/265226#265226">Ashlin H</a></td></tr>
 <tr d-ix="1"><td>087</td><td>Go</td><td>230914T202700Z</td><td><a href="https://codegolf.stackexchange.com/questions/119690/the-forbidden-built-in/265229#265229">bigyihsu</a></td></tr>
 <tr d-ix="2"><td>025</td><td>APL Dyalog Unicode</td><td>230829T184136Z</td><td><a href="https://codegolf.stackexchange.com/questions/119690/the-forbidden-built-in/264741#264741">boltcapt</a></td></tr>
@@ -830,7 +829,6 @@ result = L3(idx)
 eM            Map to the last element
 </code></pre>
 </div>
-<!-- TYYY -->
 
 <table id="st">
 <!-- Popups content will be added here -->
@@ -847,7 +845,7 @@ eM            Map to the last element
 
 
   <div class="footer">
-      <b><a class="nonewtab" href="../">GOLFSCORE/</a><a href="https://codegolf.stackexchange.com/questions/QNNN/">QNNN</a></b>
+      <b><a class="nonewtab" href="../">GOLFSCORE/</a><a href="https://codegolf.stackexchange.com/questions/119690/">119690</a></b>
   </div>
 <div class="footer-space">&nbsp;</div>
 
