--- a/q/272546.html
+++ b/q/272546.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>066</td><td>Matlab</td><td>240414T141534Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272570#272570">Xenox</a></td></tr>
-<tr d-ix="1"><td>052</td><td>JavaScript</td><td>240414T161746Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272574#272574">m90</a></td></tr>
-<tr d-ix="2"><td>083</td><td>C gcc</td><td>240414T141835Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272571#272571">Mukundan</a></td></tr>
+<tr d-ix="0"><td>082</td><td>C gcc</td><td>240414T141835Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272571#272571">Mukundan</a></td></tr>
+<tr d-ix="1"><td>066</td><td>Matlab</td><td>240414T141534Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272570#272570">Xenox</a></td></tr>
+<tr d-ix="2"><td>052</td><td>JavaScript</td><td>240414T161746Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272574#272574">m90</a></td></tr>
 <tr d-ix="3"><td>053</td><td>JavaScript V8</td><td>240413T224340Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272552#272552">l4m2</a></td></tr>
 <tr d-ix="4"><td>061</td><td>Python 2</td><td>240413T191539Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272548#272548">pxeger</a></td></tr>
 <tr d-ix="5"><td>006</td><td>Vyxal</td><td>240414T041603Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272557#272557">lyxal</a></td></tr>
@@ -38,7 +38,13 @@
 <tr d-ix="9"><td>009</td><td>Jelly</td><td>240413T191502Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272547#272547">Jonathan</a></td></tr>
 <tr d-ix="10"><td>011</td><td>Vyxal 3</td><td>240413T205045Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272550#272550">math sca</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.mathworks.com/products/matlab.html" rel="nofollow noreferrer">Matlab</a>, <s>69</s> 66 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 82 bytes</h1>
+
+<pre class="lang-c prettyprint-override"><code>i;main(j,k){for(;;k%3||printf(&quot;%d &quot;,i))for(k=__builtin_ctz(j=++i);j%3&lt;1;j/=3)k--;}
+</code></pre>
+<p><a href="https://tio.run/##FclBCoAgEADAr0QguJREeNx8i5RhrFsWYZeytxvNdZxanCuFcBspytAyPH4/JSILnfNxUkxe1mKu6pYA/mJj7XTRmihal24ZTNMQYBB66DF0RgMrhW8pHw" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.mathworks.com/products/matlab.html" rel="nofollow noreferrer">Matlab</a>, <s>69</s> 66 bytes</h1>
 
 <pre class="lang-matlab prettyprint-override"><code>i=1;a=[];while 1;if all(a-i);disp(i);a=[a [2:4 9]*i];end;i=i+1;end
 </code></pre>
@@ -47,20 +53,13 @@
 Matlab also has a <a href="https://www.mathworks.com/help/matlab/ref/double.union.html" rel="nofollow noreferrer">union function</a>, but it would cost 5 bytes.</p>
 <p>-3 bytes thanks to Luis Mendo</p>
 </div>
-<div id="pu1" class="pu"><h1>JavaScript, 52 bytes</h1>
+<div id="pu2" class="pu"><h1>JavaScript, 52 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>h=x=&gt;x%7||h(x/7)
 for(n=0;;)~h(++n)%3||console.log(n)
 </code></pre>
 <p><a href="https://tio.run/##y0osSyxOLsosKNEtLshMSS3Kzc/LTq38/z/DtsLWrkLVvKYmQ6NC31yTKy2/SCPP1sDaWrMuQ0NbO09T1bimJjk/rzg/J1UvJz9dI0/z/38A" rel="nofollow noreferrer" title="JavaScript (SpiderMonkey) – Try It Online">Try it online!</a></p>
 <p>This works because <span class="math-container">\$(\mathbb{Z}/7\mathbb{Z})^{\times}/\{1,-1\}\cong C_3\$</span>, with <span class="math-container">\$\{1,2,3\}\$</span> mapping to the three distinct elements of <span class="math-container">\$C_3\$</span>, so that for <span class="math-container">\$n\$</span> not divisible by 7, <span class="math-container">\$\{n,2n,3n\}\$</span> also map to the three distinct elements of <span class="math-container">\$C_3\$</span>.</p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 83 bytes</h1>
-
-<pre class="lang-c prettyprint-override"><code>i;main(j,k){for(;;k%3||printf(&quot;%d\n&quot;,i))for(k=__builtin_ctz(j=++i);j%3&lt;1;j/=3)k--;}
-</code></pre>
-<p><a href="https://tio.run/##FclLCoAgEADQuwiCg0qEy8mbBFJGMVoWYps@Zzd62@f14n2thNtASQQV4Z73LBAjN89zZEplFoxPfWKKAP6L1rnxpLVQcr5cIlgpCTBw07UYGmsgao1vrR8" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
-<p>Port of <a href="https://codegolf.stackexchange.com/a/272550/91267">@math scat's answer</a></p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 53 bytes</h1>
 
