--- a/q/262647.html
+++ b/q/262647.html
@@ -3,7 +3,7 @@
 <head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6EBTM9J4LK"></script>
 <script src="../g.js"></script>
-    <title>cg::QNNN</title>
+    <title>cg::262647</title>
     <link rel="stylesheet" href="../c.css">
 </head>
 <body>
@@ -26,7 +26,6 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-  <!-- TXXX -->
 <tr d-ix="0"><td>009</td><td>Uiua</td><td>231221T022932Z</td><td><a href="https://codegolf.stackexchange.com/questions/262647/sum-of-a-range-of-a-sum-of-a-range-of-a-sum-of-a-range-of-a-sum-of-a-range-of-a/268666#268666">chunes</a></td></tr>
 <tr d-ix="1"><td>015</td><td>ForWhile</td><td>230711T202018Z</td><td><a href="https://codegolf.stackexchange.com/questions/262647/sum-of-a-range-of-a-sum-of-a-range-of-a-sum-of-a-range-of-a-sum-of-a-range-of-a/262670#262670">bsoelch</a></td></tr>
 <tr d-ix="2"><td>045</td><td>Desmos</td><td>230816T195539Z</td><td><a href="https://codegolf.stackexchange.com/questions/262647/sum-of-a-range-of-a-sum-of-a-range-of-a-sum-of-a-range-of-a-sum-of-a-range-of-a/264273#264273">fwoosh</a></td></tr>
@@ -606,7 +605,6 @@ R    -   Range [1, ..., n]
    ¡ - Apply f n times, beginning with n 
 </code></pre>
 </div>
-<!-- TYYY -->
 
 <table id="st">
 <!-- Popups content will be added here -->
@@ -623,7 +621,7 @@ R    -   Range [1, ..., n]
 
 
   <div class="footer">
-      <b><a class="nonewtab" href="../">GOLFSCORE/</a><a href="https://codegolf.stackexchange.com/questions/QNNN/">QNNN</a></b>
+      <b><a class="nonewtab" href="../">GOLFSCORE/</a><a href="https://codegolf.stackexchange.com/questions/262647/">262647</a></b>
   </div>
 <div class="footer-space">&nbsp;</div>
 
