--- a/q/272452.html
+++ b/q/272452.html
@@ -71,11 +71,11 @@
           .Ts());                // Shorthand for .ToString()
 });
 </code></pre>
-<h1><a href="https://www.microsoft.com/net/core/platform" rel="nofollow noreferrer">C# (.NET Core)</a>, 152 bytes</h1>
+<h1><a href="https://www.microsoft.com/net/core/platform" rel="nofollow noreferrer">C# (.NET Core)</a>, 130 bytes</h1>
 
-<pre class="lang-cs prettyprint-override"><code>for(int i=1;i&lt;=n;i++){int f=i,b=i;string e=null;for(;f%3&lt;1;f/=3)e+=&quot;Fizz&quot;;for(;b%5&lt;1;b/=5)e+=&quot;Buzz&quot;;if(i%3&gt;0&amp;i%5&gt;0)e=i.ToString();Console.WriteLine(e);}
+<pre class="lang-cs prettyprint-override"><code>for(int i=1;i&lt;=n;i++){int f=i,b=i;string e=null;for(;f%3&lt;1;f/=3)e+=&quot;Fizz&quot;;for(;b%5&lt;1;b/=5)e+=&quot;Buzz&quot;;Console.WriteLine(e??$&quot;{i}&quot;);}
 </code></pre>
-<p><a href="https://tio.run/##Nc1Ba8MwDAXge3@FKGTYZG3ThZxU9bDBThsMOtjZyeQicO1iO4W15LdnScdOgvc9nrq06kLksU/ij3D4SZlPuFic@9ZJB50zKcFHDMdoTnD7j1M2eTqXIN/wbsQrPdnFRPBA8FRVONoQlfgMQluUHXmUstS3ObEkjy0Jphznj0y@dw7nPtqi3m3RbqjWXNLyVa7X5Z@0RTNJu6HmLs/9LGKVFPW@epCi2VeaSdaf4XCfVRpfgk/B8forSuY38axY4zAOw/gL" rel="nofollow noreferrer" title="C# (.NET Core) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##Nc3NCoJAFAXgfU9xkQTF/sXV7RIUtCoIWrQebZQL00zMjEGKz25atDpwvgOncPPCWNnXjnUF17fz8oGTybPOFRdQKOEcXKyprHhA@6@dF36Il@E7nAXrKB7sJSxoINisVtiXxkasPTCtkbekkZMkbsemJJ7lxOi8HR8l6VopHPdYhul2jeWS0lgmFBy5aYKf5GE2SL6k7Cv7epSD0c4oubhZ9vLEWkZyt5sGLXdBjF3fdf0H" rel="nofollow noreferrer" title="C# (.NET Core) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 76 bytes</h1>
 
