--- a/q/272569.html
+++ b/q/272569.html
@@ -26,10 +26,20 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>264</td><td>JavaScript V8</td><td>240414T161721Z</td><td><a href="https://codegolf.stackexchange.com/questions/272569/print-all-legal-chess-moves/272573#272573">Arnauld</a></td></tr>
-<tr d-ix="1"><td>166</td><td>Charcoal</td><td>240414T161820Z</td><td><a href="https://codegolf.stackexchange.com/questions/272569/print-all-legal-chess-moves/272575#272575">Neil</a></td></tr>
+<tr d-ix="0"><td>141</td><td>Jelly</td><td>240415T021538Z</td><td><a href="https://codegolf.stackexchange.com/questions/272569/print-all-legal-chess-moves/272590#272590">Jonathan</a></td></tr>
+<tr d-ix="1"><td>264</td><td>JavaScript V8</td><td>240414T161721Z</td><td><a href="https://codegolf.stackexchange.com/questions/272569/print-all-legal-chess-moves/272573#272573">Arnauld</a></td></tr>
+<tr d-ix="2"><td>166</td><td>Charcoal</td><td>240414T161820Z</td><td><a href="https://codegolf.stackexchange.com/questions/272569/print-all-legal-chess-moves/272575#272575">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 264 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 141 bytes</h1>
+<pre><code>_/µ¬S1⁼;AE$;Ẹ$;AṢJƑƊ;AỊẠƊ
+“ RBQNK”p⁾x-;€”=;þṖḊ$ZḢW;mʋ2
+7Ḋ;€-µjþØ+Ẏ,j€0ṠḤḢṭƲ$
+8p`⁺EÐḟµ_\FḊeⱮ¢+a¥FṪ⁼8Ʋ;ÑḤḣ€@&quot;2£ẎQ¹Ƈż€ị€1¦€Øa$)ẎF€t€⁶⁾O-ṁⱮ3,5¤;K
+</code></pre>
+<p>A full program that prints all of white's possible moves.</p>
+<p><strong><a href="https://tio.run/##y0rNyan8/z9e/9DWQ2uCDR817rF2dFWxfrhrh4q148Odi7yOTTzWBWTt7nq4a8GxLq5HDXMUgpwC/bwfNcwteNS4r0LX@lHTGiDH1vrwvoc7pz3c0aUS9XDHonDr3FPdRlzmQD5Ige6hrVmH9x2eof1wV59OFlDA4OHOBQ93LAGqfLhz7bFNKlwWBQmPGne5Hp7wcMf8Q1vjY9yAOlMfbVx3aJF24qGlbg93rgK6zeLYJuvDE8H6FgMNcVAyOrQYaGLgoZ3H2o/uAYo83N0NJA0PLQOSh2ckqmgCZd2A7BKQIxu3AR3sr/twZyPQXGMd00NLrL3//wcA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 264 bytes</h1>
 <p>A full program that prints all possible white moves.</p>
 <pre class="lang-javascript prettyprint-override"><code>s=&quot;NBRQK&quot;
 g=(x,y)=&gt;&quot;abcdefgh&quot;[x]+-~y
@@ -118,7 +128,7 @@ O-O-O`)
 </tbody>
 </table></div>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 166 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 166 bytes</h1>
 <pre><code>Ｅ35…O-ＩιＦ⁸Ｆ⁸Ｆ⁸ＦΦ⁸∨⁻λι⁻μκ«Ｅ⎇⁼⁵⁺Ｘ⁻λι²Ｘ⁻μκ²N⁺…K∧‹↔⁻λι²‹↔⁻μκ²⭆⁺…B⁼↔⁻λι↔⁻μκ…R∨⁼λι⁼μκ⁺νQ⪫⟦ν§βι⊕κ-§βλ⊕μ⟧ω¿∧⁼¹⁻μκ‹↔⁻λι²¿κＥ⎇⁼μ⁷⁺=⪪NBRQ¹⟦ω⟧⪫⟦§βι⊕κ§-x⁻λι§βλ⊕μν⟧ω¿⁼λι⟦⪫⟦ω2-¦4⟧§βι
 </code></pre>
 <p><a href="https://tio.run/##hVFNT8JAED3Dr9jsaZosB1AiifEARBNUvr2RHkpZZMOyxW2xEONvr7PtFmpTtEnbzNeb9974G0/7gSeTZKKFimDo7YHetCkj/ZMveX8TYDxumNgLIxAOPvf1daAJdBxS@X8SMuIaOoyMNQyFOoQgGREOI1mwY2RrYMhXvXZZ@sa18vQJHj8OngyhzchEYvMkiHkJpYVvMZ3imbSDXzqidrLA/wVzXbWCVx6G0F2GgTxEvAhqUavqGdscfh4h4XfDt7yjhzss9ysbKoFNoYAyo6lrFsgKtpEdsPIUap3SDOA5EAoWmOlGA7XiR1hmgwPla77jKuIrMBZRc8dCjyz17ByXkTi9cE2sCRjP7PLm7@tVe3XxEq9rALYOuXphBLrLxdAHJDbfSxEBHfVmU4yaBmgRu2d5/2jLy7RxpDnXs/N/SWZE5aoJlyFPiRcPkGtYZDxi9LFljKS31C1Z7rho3XeSJI1P@QM" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
